# datamime

./: .gitignore  README.md  setup_pstate_msr.sh
apps/: .gitignore  README.md  app_configs.yml  distribution.py  params.py  run_configs.sh  workloads.py  workloads_dict.py
apps/dnn/: CMakeLists.txt  README.md  build.sh  client.cpp  example.cpp  imagefolder_dataset.cpp  imagenet-inference.cpp  main.cpp  mkldnn-test.py  run.sh  server.cpp  server.h
apps/dnn/scripts/: create-model.py
apps/harness/: Makefile  client.cpp  client.h  tbench_client_networked.cpp  tbench_server_integrated.cpp  tbench_server_networked.cpp
apps/memcached/: .gitignore  build.sh  clean.sh
apps/memcached/memcached-1.6.12/: Makefile.in  build.sh  config.h.in  configure  memcached.spec  run.sh  thread.c  version.m4
apps/memcached/memcached-1.6.12/autom4te.cache/: output.1  traces.0  traces.1
apps/memcached/mutilate/: Connection.cc  Generator.h  TestGenerator.cc  ia  mutilate.cc  run.sh  stats.py
apps/memcached/mutilate-twtr/: Connection.cc  Connection.h  ConnectionOptions.h  ConnectionStats.h  Generator.cc  Generator.h  README.md  SConstruct  cmdline.ggo  mutilate.cc  request.h  run.sh
apps/scripts/: generate_data.sh  valprep.sh
apps/silo/: Makefile  README.md  bid-lats.txt  build.sh  run.sh  tpcc-lats.txt  ycsb-lats.txt
apps/silo/benchmarks/: bench.cc  client.cc
apps/silo/masstree/autom4te.cache/: output.1  requests  traces.0  traces.1
apps/xapian/: Makefile  README  build.sh  checkzipf.py  client.cpp  create_terms.py  genDB.cpp  genDB.h  genTerms.cpp  genzipf.cpp  genzipf.h  genzipftest.cpp  main.cpp  pregenDB.cpp  run.sh  server.cpp
microbenchmarks/: Makefile  microbenchmark.cpp  random-iaxpy.cpp  traverse-array-mt.cpp  traverse-array.cpp
profiler/: Makefile  armadillo.h  cache_utils.cpp  cache_utils.h  datamime-profiler.cpp  datamime-profiler.h  events.py  harness.py  init-cat-cbm.cpp  list-events.cpp  mrc.h  to_csv.py  tsc-freq.cpp
profiler/lltools/: Makefile
profiler/lltools/cat/: cat_cbm.cpp  cat_config.cpp  cat_cos.cpp  cmt_rmid.cpp
profiler/lltools/include/: cat.h  cmt.h  cpuid.h  msr.h  msr_haswell.h  sysconfig.h
search/: cost_model.py  optimizer_configs.yml  search_dataset.py  utils.py  workload_base.py
